--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:id="@+id/indicator_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="Score: 0"/>
+
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="00:00"/>
+
+        <at.grabner.circleprogress.CircleProgressView
+            android:id="@+id/circle_view"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="2dp"
+            app:cpv_autoTextSize="true"
+            app:cpv_barColor="@color/colorPrimary"
+            app:cpv_barWidth="5dp"
+            app:cpv_innerContourSize="0dp"
+            app:cpv_maxValue="30"
+            app:cpv_outerContourSize="0dp"
+            app:cpv_rimColor="@color/colorAccent"
+            app:cpv_rimWidth="5dp"
+            app:cpv_seekMode="true"
+            app:cpv_showUnit="true"
+            app:cpv_spinColor="@color/colorPrimary"
+            app:cpv_textColor="@color/colorPrimaryDark"
+            app:cpv_textScale="1"
+            app:cpv_unit=""
+            app:cpv_unitColor="@color/colorAccent"
+            app:cpv_unitPosition="bottom"
+            app:cpv_unitScale="10"
+            app:cpv_value="0" />
+    </RelativeLayout>
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
-        android:layout_above="@id/navigationView">
+        android:layout_above="@id/navigationView"
+        android:layout_below="@id/indicator_bar"
+        android:animateLayoutChanges="true">
 
     </FrameLayout>
 
@@ -18,9 +66,9 @@
         android:id="@+id/navigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:layout_alignParentBottom="true"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
