--- a/app/src/main/res/layout/fragment_level_easy.xml
+++ b/app/src/main/res/layout/fragment_level_easy.xml
@@ -10,25 +10,37 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/item_1_1"
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
             android:layout_weight="1"
-            android:background="?attr/selectableItemBackground"
-            android:padding="10dp"
-            android:src="@drawable/ic_question_mark" />
+            android:background="@drawable/borders">
 
-        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/item_1_2"
+            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/item_1_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:background="?attr/selectableItemBackground"
+                android:padding="10dp"
+                android:src="@drawable/ic_question_mark" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
             android:layout_weight="1"
-            android:background="?attr/selectableItemBackground"
-            android:padding="10dp"
-            android:src="@drawable/ic_question_mark" />
+            android:background="@drawable/borders">
+
+            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/item_1_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:background="?attr/selectableItemBackground"
+                android:padding="10dp"
+                android:src="@drawable/ic_question_mark" />
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -37,25 +49,37 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/item_2_1"
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
             android:layout_weight="1"
-            android:background="?attr/selectableItemBackground"
-            android:padding="10dp"
-            android:src="@drawable/ic_question_mark" />
+            android:background="@drawable/borders">
 
-        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/item_2_2"
+            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/item_2_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:background="?attr/selectableItemBackground"
+                android:padding="10dp"
+                android:src="@drawable/ic_question_mark" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
             android:layout_weight="1"
-            android:background="?attr/selectableItemBackground"
-            android:padding="10dp"
-            android:src="@drawable/ic_question_mark" />
+            android:background="@drawable/borders">
+
+            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/item_2_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:background="?attr/selectableItemBackground"
+                android:padding="10dp"
+                android:src="@drawable/ic_question_mark" />
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -64,24 +88,36 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/item_3_1"
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
             android:layout_weight="1"
-            android:background="?attr/selectableItemBackground"
-            android:padding="10dp"
-            android:src="@drawable/ic_question_mark" />
+            android:background="@drawable/borders">
 
-        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/item_3_2"
+            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/item_3_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:background="?attr/selectableItemBackground"
+                android:padding="10dp"
+                android:src="@drawable/ic_question_mark" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
             android:layout_weight="1"
-            android:background="?attr/selectableItemBackground"
-            android:padding="10dp"
-            android:src="@drawable/ic_question_mark" />
+            android:background="@drawable/borders">
+
+            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/item_3_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:background="?attr/selectableItemBackground"
+                android:padding="10dp"
+                android:src="@drawable/ic_question_mark" />
+        </FrameLayout>
     </LinearLayout>
 </LinearLayout>
