--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/dp_8"
@@ -15,8 +14,8 @@
         android:layout_marginStart="@dimen/dp_16"
         android:gravity="center"
         android:text="@string/action_level_title"
-        android:textStyle="bold"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <View
         android:layout_width="match_parent"
@@ -25,39 +24,46 @@
         android:layout_marginTop="@dimen/md_bottom_sheet_separator_top_margin"
         android:background="@color/gray" />
 
-    <RadioButton
-        android:id="@+id/level_easy"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_48"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:layout_marginStart="@dimen/dp_16"
-        android:backgroundTint="@android:color/white"
-        android:drawablePadding="@dimen/dp_32"
-        android:gravity="start|center_vertical"
-        android:text="@string/action_level_easy"
-        android:textSize="16sp" />
 
-    <RadioButton
-        android:id="@+id/level_medium"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:layout_marginStart="@dimen/dp_16"
-        android:backgroundTint="@android:color/white"
-        android:drawablePadding="@dimen/dp_32"
-        android:gravity="start|center_vertical"
-        android:text="@string/action_level_medium"
-        android:textSize="16sp" />
+    <RadioGroup
+        android:id="@+id/radioLevel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <RadioButton
-        android:id="@+id/level_hard"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_48"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:layout_marginStart="@dimen/dp_16"
-        android:backgroundTint="@android:color/white"
-        android:drawablePadding="@dimen/dp_32"
-        android:gravity="start|center_vertical"
-        android:text="@string/action_level_hard"
-        android:textSize="16sp" />
+        <RadioButton
+            android:id="@+id/level_easy"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_48"
+            android:layout_marginEnd="@dimen/dp_16"
+            android:layout_marginStart="@dimen/dp_16"
+            android:backgroundTint="@android:color/white"
+            android:drawablePadding="@dimen/dp_32"
+            android:gravity="start|center_vertical"
+            android:text="@string/action_level_easy"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/level_medium"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginEnd="@dimen/dp_16"
+            android:layout_marginStart="@dimen/dp_16"
+            android:backgroundTint="@android:color/white"
+            android:drawablePadding="@dimen/dp_32"
+            android:gravity="start|center_vertical"
+            android:text="@string/action_level_medium"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/level_hard"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_48"
+            android:layout_marginEnd="@dimen/dp_16"
+            android:layout_marginStart="@dimen/dp_16"
+            android:backgroundTint="@android:color/white"
+            android:drawablePadding="@dimen/dp_32"
+            android:gravity="start|center_vertical"
+            android:text="@string/action_level_hard"
+            android:textSize="16sp" />
+    </RadioGroup>
 </LinearLayout>
